  * H323 remote hold notification support added (by NOTIFY message
     and/or H.450 supplementary service)
  * Added keepstats option to queues.conf which will keep queue
     statistics during a reload.
  * Added rotatetimestamp option to logger.conf which will use
     the time to name the logger files instead of sequence number.
  * The output of CallerID in Manager events is now more consistent.
     CallerIDNum is used for number and CallerIDName for name.
  * setinterfacevar option in queues.conf also now sets a variable
     called MEMBERNAME which contains the member's name.
  * Added Masquerade manager event for when a masquerade happens between
     two channels.
  * Added 'Strategy' field to manager event QueueParams which represents
     the queue strategy in use. 
  * From the to-do lists: straighten out the app timeout args:
     Wait() app now really does 0.3 seconds- was truncating arg to an int.
     WaitExten() same as Wait().
     Congestion() - Now takes floating pt. argument.
     Busy() - now takes floating pt. argument.
     Read() - timeout now can be floating pt.
     WaitForRing() now takes floating pt timeout arg.
     SpeechBackground() -- clarified in the docstrings that the timeout is an integer seconds.
  * Extend CALLERID() function with "pres" and "ton" parameters to
     fetch string representation of calling number presentation indicator
     and numeric representation of type of calling number value.
  * Added 'C' option to Meetme which causes a caller to continue in the dialplan
     when kicked out.
  * Added option to run macro when a queue member is connected to a caller, 
     see queues.conf.sample for details.
  * Added QUEUE_VARIABLES function to set queue variables added setqueuevar and 
    setqueueentryvar options for each queue, see queues.conf.sample for details.
  * Brazilian Portuguese (pt-BR) in VM, and say.c was added via patch from cfassoni.
  * CID matching information is now shown when doing 'dialplan show'.